--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
+  "cleanUrls": true,
   "headers": [
     {
       "source": "/assets/(.*)",
@@ -14,6 +12,15 @@
     },
     {
       "source": "/items/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*).(webp|avif|mp4|webm|mp3|wav)",
       "headers": [
         {
           "key": "Cache-Control",
